# saddle-camera-cinematic-camera

./: Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: BuNcToX7.js  C-32iJ2r.js  CTlxD36v.js  DXsWyx1M.js  DbYDC3cU.js
_app/immutable/entry/: app.CIXt8UDu.js  start.CqE4WrTd.js
_app/immutable/nodes/: 0.eCQWV2Vh.js  1.DjVc_Ozd.js  2.q6OkZ4c-.js  3.B6ji4Gvs.js  4.CSCfE9re.js
demo/basic/: index.html
demo/blend_between_shots/: index.html
demo/cinematic_orbit_handoff/: index.html
demo/handheld_rail/: index.html
demo/lab/: index.html
demo/moving_target/: index.html
demo/stress_preview/: index.html
demo/target_group/: index.html
demo/virtual_camera_brain/: index.html
demos/basic/: index.html
demos/blend_between_shots/: index.html
demos/cinematic_orbit_handoff/: index.html
demos/handheld_rail/: index.html
demos/lab/: index.html
demos/moving_target/: index.html
demos/stress_preview/: index.html
demos/target_group/: index.html
demos/virtual_camera_brain/: index.html
docs/: architecture.md  configuration.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/blend_between_shots/: Cargo.toml
examples/blend_between_shots/src/: main.rs
examples/cinematic_orbit_handoff/: Cargo.toml
examples/cinematic_orbit_handoff/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/handheld_rail/: Cargo.toml
examples/handheld_rail/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs
examples/moving_target/: Cargo.toml
examples/moving_target/src/: main.rs
examples/stress_preview/: Cargo.toml
examples/stress_preview/src/: main.rs
examples/target_group/: Cargo.toml
examples/target_group/src/: main.rs
examples/virtual_camera_brain/: Cargo.toml
examples/virtual_camera_brain/src/: main.rs
src/: collision.rs  components.rs  config.rs  config_tests.rs  curve.rs  curve_tests.rs  debug.rs  lib.rs  messages.rs  plugin_tests.rs  resources.rs  solver.rs  solver_tests.rs  systems.rs  systems_tests.rs
