[workspace]
members = [
    "common",
    "basic",
    "blend_between_shots",
    "cinematic_orbit_handoff",
    "moving_target",
    "target_group",
    "handheld_rail",
    "stress_preview",
    "virtual_camera_brain",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-camera-cinematic-camera = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
