[package]
name = "saddle-camera-cinematic-camera-example-cinematic-orbit-handoff"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-camera-cinematic-camera = { workspace = true }
saddle-camera-cinematic-camera-example-common = { path = "../common" }
saddle-camera-orbit-camera = { git = "https://github.com/julien-blanchon/saddle-camera-orbit-camera" }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[lints]
workspace = true
