[package]
name = "saddle-camera-cinematic-camera-example-stress-preview"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-camera-cinematic-camera = { workspace = true }
saddle-camera-cinematic-camera-example-common = { path = "../common" }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[lints]
workspace = true
